Fixed semi-transparent background being removed when on mobile.

--- a/dev/scss/globals/main.scss
+++ b/dev/scss/globals/main.scss
@@ -1405,7 +1405,6 @@
 				padding: 6em 0;
 
 				.inner {
-					background: none;
 					display: block;
 					padding: 0 1.5em;
 
